--- a/frontend/src/components/financeManager/chart/AnnualFinancialReportChart.scss
+++ b/frontend/src/components/financeManager/chart/AnnualFinancialReportChart.scss
@@ -1,14 +1,12 @@
 @import "../../../styles/Variables.scss";
 @import "../../../styles/Mixins.scss";
 
-.chart-wrapper {
+.annual-report-chart-wrapper {
   position: relative;
   margin: 2rem 0;
 
-  .chart-title {
+  .annual-report-chart-title {
     @include subTitle;
-    font-size: $aafs;
-    
   }
 
   .financial-year-form {
@@ -29,4 +27,109 @@
     @include subTitle;
     color: $tomato;
   }
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .annual-report-chart-wrapper {
+    position: relative;
+
+    .annual-report-chart-title {
+      font-size: $nfs;
+      text-align: center;
+      margin: 5rem 0;
+    }
+
+    .financial-year-form {
+      @include flexRow;
+      position: absolute;
+      top: 4rem;
+      left: 0;
+
+      .input-field {
+        @include inputWithButton;
+      }
+
+      .year-form-btn {
+        @include buttonWithInput;
+      }
+    }
+
+    .no-reports-message {
+      @include subTitle;
+      color: $tomato;
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .annual-report-chart-wrapper {
+    position: relative;
+
+    .annual-report-chart-title {
+      font-size: $afs;
+      margin: 5rem 0;
+    }
+
+    .financial-year-form {
+      @include flexRow;
+      position: absolute;
+      top: 4rem;
+      left: 0;
+
+      .input-field {
+        @include inputWithButton;
+      }
+
+      .year-form-btn {
+        @include buttonWithInput;
+      }
+    }
+
+    .no-reports-message {
+      @include subTitle;
+      color: $tomato;
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .annual-report-chart-wrapper {
+    position: relative;
+
+    .annual-report-chart-title {
+      font-size: $afs;
+      margin: 5rem 0;
+    }
+
+    .financial-year-form {
+      @include flexRow;
+      position: absolute;
+      top: 4rem;
+      left: 0;
+
+      .input-field {
+        @include inputWithButton;
+      }
+
+      .year-form-btn {
+        @include buttonWithInput;
+      }
+    }
+
+    .no-reports-message {
+      @include subTitle;
+      color: $tomato;
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
 }
