--- a/frontend/src/components/financeManager/financeManagerSidebar/FinanceMgtSidebar.scss
+++ b/frontend/src/components/financeManager/financeManagerSidebar/FinanceMgtSidebar.scss
@@ -1,49 +1,135 @@
-@import '../../../styles/Variables.scss';
-@import '../../../styles/Mixins.scss';
+@import "../../../styles/Variables.scss";
+@import "../../../styles/Mixins.scss";
 
-.finance-manager-dashboard-sidebar-wrapper {
+.finance-manager-dashboard-sidebar-container{
   width: 16%;
-  min-height: 100vh;
   background-color: $sidebar-bg;
 
-  .finance-manager-dashboard-sidebar-title {
-    @include subTitle;
+  .finance-manager-hamburger-menu {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
   }
 
-  .finance-manager-dashboard-sidebar-item {
-    @include flexRow;
-    @include shadow1;
-    align-items: center;
-    cursor: pointer;
+  // Big screens
 
-    &:hover {
-      background-color: $sidebar-hover;
+  .finance-manager-dashboard-sidebar-wrapper {
+    .finance-manager-dashboard-sidebar-title {
+      @include subTitle;
     }
 
-    .active-icon {
-      color: $red;
-      font-size: $afs;
-    }
-
-    .passive-icon {
-      color: $iconColor;
-      font-size: $afs;
+    .finance-manager-dashboard-sidebar-item {
+      @include flexRow;
+      @include shadow1;
+      align-items: center;
+      cursor: pointer;
 
       &:hover {
+        background-color: $sidebar-hover;
+      }
+
+      .active-icon {
+        color: $red;
+        font-size: $afs;
+      }
+
+      .passive-icon {
+        color: $iconColor;
+        font-size: $afs;
+
+        &:hover {
+          color: $red;
+        }
+      }
+
+      .active-text {
         color: $red;
       }
-    }
 
-    .active-text {
-      color: $red;
-    }
+      .passive-text {
+        color: $black;
 
-    .passive-text {
-      color: $black;
-
-      &:hover {
-        color: $red;
+        &:hover {
+          color: $red;
+        }
       }
     }
+  }
+}
+
+.finance-manager-dashboard-sidebar-container.open-finance-manager-menu {
+  .finance-manager-dashboard-sidebar-wrapper {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 3rem;
+    left: 0rem;
+    background-color: $userSidebar-bg;
+    width: 100%;
+    min-height: 100vh;
+    padding: 1rem 2rem;
+    z-index: 9999;
+
+    .finance-manager-dashboard-sidebar-item {
+      .active-icon {
+        font-size: $nfs;
+      }
+
+      .passive-icon {
+        font-size: $nfs;
+      }
+
+      .active-text {
+        font-size: $sfs;
+      }
+
+      .passive-text {
+        font-size: $sfs;
+      }
+    }
+  }
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .finance-manager-dashboard-sidebar-container {
+  
+    .finance-manager-dashboard-sidebar-wrapper {
+      display: none;
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .finance-manager-dashboard-sidebar-container {
+   
+    .finance-manager-dashboard-sidebar-wrapper {
+      display: none;
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .finance-manager-dashboard-sidebar-container {
+   
+    .finance-manager-dashboard-sidebar-wrapper {
+      display: none;
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+  .finance-manager-hamburger-menu {
+    display: none;
+  }
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
+  .finance-manager-hamburger-menu {
+    display: none;
   }
 }
