--- a/frontend/src/components/financeManager/membersContribution/AllContributions.scss
+++ b/frontend/src/components/financeManager/membersContribution/AllContributions.scss
@@ -9,25 +9,6 @@
     text-align: center;
   }
 
-  .year-filter-form {
-    @include flexRow;
-    align-items: center;
-    margin: 0 0 1rem 0;
-
-    .year-filter-label {
-      font-size: $nfs;
-    }
-
-    .year-filter-input {
-      @include inputWithButton;
-      width: 15rem;
-    }
-
-    .year-filter-btn {
-      @include buttonWithInput;
-    }
-  }
-
   .add-contribution-aside {
     @include flexSpaceBetween;
     margin: 2rem 0;
@@ -41,8 +22,136 @@
     }
   }
 
+  .year-filter-form {
+    @include flexRow;
+    align-items: center;
+    margin: 0 0 1rem 0;
+
+    .year-filter-label {
+      font-size: $nfs;
+      text-align: left;
+    }
+
+    .year-filter-input {
+      @include inputWithButton;
+      width: 15rem;
+    }
+
+    .year-filter-btn {
+      @include buttonWithInput;
+    }
+  }
+
+ 
+
   .no-financial-contribution {
     @include subTitle;
     color: $tomato;
   }
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .members-contribution-wrapper {
+    width: $mobile;
+
+    .members-contribution-title {
+      font-size: $nfs;
+      text-align: center;
+    }
+
+    .add-contribution-aside {
+      @include flexSpaceBetween;
+      margin: 2rem 0;
+
+      .add-contribution-aside-title {
+        font-size: $sfs;
+      }
+
+      .add-contribution-btn {
+        font-size: $sfs;
+      }
+    }
+
+    .year-filter-form {
+      @include flexColumn;
+      width: 100%;
+
+      .year-filter-label {
+        font-size: $sfs;
+      }
+
+      .year-filter-input {
+        font-size: $sfs;
+        width: 100%;
+      }
+
+      .year-filter-btn {
+        @include button3;
+      }
+    }
+
+    .no-financial-contribution {
+      font-size: $sfs;
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .members-contribution-wrapper {
+    width: $tablet;
+
+    .members-contribution-title {
+      font-size: $afs *1.2;
+      text-align: center;
+    }
+
+    .add-contribution-aside {
+      @include flexSpaceBetween;
+      margin: 2rem 0;
+
+      .add-contribution-aside-title {
+        font-size: $afs;
+      }
+
+      .add-contribution-btn {
+        font-size: $nfs;
+      }
+    }
+
+    .year-filter-form {
+      @include flexColumn;
+      width: 100%;
+
+      .year-filter-label {
+        font-size: $nfs;
+      }
+
+      .year-filter-input {
+        font-size: $nfs;
+        width: 100%;
+      }
+
+      .year-filter-btn {
+        @include button3;
+      }
+    }
+
+    .no-financial-contribution {
+      font-size: $nfs;
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
 }
