--- a/frontend/src/components/parishPriest/allEvents/AllEvents.scss
+++ b/frontend/src/components/parishPriest/allEvents/AllEvents.scss
@@ -11,3 +11,37 @@
     padding: 2rem 0;
   }
 }
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .church-events-table-container {
+    width: $mobile;
+
+    .church-events-table-title {
+      font-size: $nfs;
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .church-events-table-container {
+    width: $tablet;
+
+    .church-events-table-title {
+      font-size: $afs;
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
+}
