--- a/frontend/src/components/parishPriest/allParishioners/AllParishioners.scss
+++ b/frontend/src/components/parishPriest/allParishioners/AllParishioners.scss
@@ -12,3 +12,48 @@
     padding: 2rem 0;
   }
 }
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .priest-dashboard-parishioners-container {
+    width: $mobile;
+
+    .parishioners-title {
+      font-size: $nfs;
+      padding: 0.2rem 0 1rem 0;
+      text-align: center;
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .priest-dashboard-parishioners-container {
+    width: $tablet;
+
+    .parishioners-title {
+      font-size: $afs;
+      padding: 1rem;
+      text-align: center;
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .priest-dashboard-parishioners-container {
+    width: $laptop;
+
+    .parishioners-title {
+      font-size: $aafs;
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
+}
