--- a/frontend/src/components/parishPriest/charts/sacraments/SacramentsLineChart.scss
+++ b/frontend/src/components/parishPriest/charts/sacraments/SacramentsLineChart.scss
@@ -2,8 +2,6 @@
 @import "../../../../styles/Mixins.scss";
 
 .sacraments-line-chart-container {
-  position: relative;
-  margin: 2rem 0;
   background-color: $chart-bg;
   padding: 1rem 2rem;
   border-radius: $radius;
@@ -30,4 +28,82 @@
       }
     }
   }
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .sacraments-line-chart-container {
+    padding: 1rem;
+
+    .sacraments-line-chart-title {
+      font-size: $nfs;
+      text-align: center;
+      padding: 0;
+    }
+
+    .sacrament-info-text {
+      @include flexColumn;
+      .sacrament-count {
+        font-size: $sfs;
+      }
+
+      .more-information {
+        font-size: $sfs;
+      }
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .sacraments-line-chart-container {
+
+    .sacraments-line-chart-title {
+      font-size: $afs;
+      text-align: center;
+   
+    }
+
+    .sacrament-info-text {
+      @include flexColumn;
+      .sacrament-count {
+        font-size: $sfs;
+      }
+
+      .more-information {
+        font-size: $sfs;
+      }
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .sacraments-line-chart-container {
+
+    .sacraments-line-chart-title {
+      font-size: $aafs;
+      text-align: center;
+   
+    }
+
+    .sacrament-info-text {
+   
+      .sacrament-count {
+        font-size: $nfs;
+      }
+
+      .more-information {
+        font-size: $nfs;
+      }
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
 }
