--- a/frontend/src/components/parishPriest/charts/services/ServicesBarChart.scss
+++ b/frontend/src/components/parishPriest/charts/services/ServicesBarChart.scss
@@ -43,3 +43,99 @@
     }
   }
 }
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .services-bar-chart-container {
+    padding: 0.1rem;
+    margin: 4rem 0;
+
+    .service-chart-title {
+      font-size: $nfs;
+    }
+
+    .service-chart-form {
+      position: absolute;
+      top: -2rem;
+      right: 1rem;
+
+      .input-field {
+        font-size: $sfs;
+      }
+
+      .service-form-btn {
+        font-size: $sfs;
+      }
+    }
+
+    .services-chart-info-text {
+      @include flexColumn;
+      margin: 1rem;
+      .services-count {
+        mark {
+          font-size: $sfs;
+        }
+      }
+
+      .details {
+        .view-services {
+          font-size: $sfs;
+        }
+      }
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .services-bar-chart-container {
+    padding: 0.5rem;
+    margin: 4rem 0;
+
+    .service-chart-title {
+      font-size: $nfs;
+    }
+
+    .service-chart-form {
+      position: absolute;
+      top: -3rem;
+      right: 1rem;
+
+      .input-field {
+        font-size: $sfs;
+      }
+
+      .service-form-btn {
+        font-size: $sfs;
+      }
+    }
+
+    .services-chart-info-text {
+      @include flexColumn;
+      margin: 1rem;
+      .services-count {
+        mark {
+          font-size: $sfs;
+        }
+      }
+
+      .details {
+        .view-services {
+          font-size: $sfs;
+        }
+      }
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
+}
