--- a/frontend/src/components/parishPriest/priestDashboardOverview/PriestDashboardOverview.scss
+++ b/frontend/src/components/parishPriest/priestDashboardOverview/PriestDashboardOverview.scss
@@ -1,6 +1,39 @@
-@import '../../../styles/Variables.scss';
-@import '../../../styles/Mixins.scss';
+@import "../../../styles/Variables.scss";
+@import "../../../styles/Mixins.scss";
 
 .priest-dashboard-overview-wrapper {
   width: $laptop;
+  margin: auto;
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .priest-dashboard-overview-wrapper {
+    width: $mobile;
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .priest-dashboard-overview-wrapper {
+    width: $mobile;
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .priest-dashboard-overview-wrapper {
+    width: $tablet;
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
+  .priest-dashboard-overview-wrapper {
+    width: $desktop;
+  }
 }
