--- a/frontend/src/views/financePages/financeManagerPage/FinanceManagerPage.scss
+++ b/frontend/src/views/financePages/financeManagerPage/FinanceManagerPage.scss
@@ -1,17 +1,79 @@
-@import '../../../styles/Variables.scss';
-@import '../../../styles/Mixins.scss';
+@import "../../../styles/Variables.scss";
+@import "../../../styles/Mixins.scss";
 
-.financial-manager-wrapper {
-  .financial-manager-container {
-    .financial-manager-title {
+.financial-manager-page {
+  .financial-manager-page-container {
+    .financial-manager-page-title {
       @include title;
       background-color: $sidebar-bg;
     }
 
-    .financial-manager-contents {
+    .financial-manager-contents-wrapper {
       width: 80%;
       @include flexRow;
       width: 100%;
     }
   }
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .financial-manager-page {
+    .financial-manager-page-container {
+      .financial-manager-page-title {
+        font-size: $sfs;
+        background-color: $mobile-header-bg;
+      }
+
+      .financial-manager-contents-wrapper {
+        @include flexColumn;
+        width: $mobile;
+        margin: auto;
+      }
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .financial-manager-page {
+    .financial-manager-page-container {
+      .financial-manager-page-title {
+        font-size: $nfs;
+        background-color: $mobile-header-bg;
+      }
+
+      .financial-manager-contents-wrapper {
+        @include flexColumn;
+        width: $tablet;
+        margin: auto;
+      }
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .financial-manager-page {
+    .financial-manager-page-container {
+      .financial-manager-page-title {
+        font-size: $afs;
+        background-color: $mobile-header-bg;
+      }
+
+      .financial-manager-contents-wrapper {
+        @include flexColumn;
+        width: $tablet;
+        margin: auto;
+      }
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
 }
