--- a/frontend/src/views/priestPages/priestDashboardPage/PriestDashboardPage.scss
+++ b/frontend/src/views/priestPages/priestDashboardPage/PriestDashboardPage.scss
@@ -1,20 +1,69 @@
-@import '../../../styles/Variables.scss';
-@import '../../../styles/Mixins.scss';
+@import "../../../styles/Variables.scss";
+@import "../../../styles/Mixins.scss";
 
 .parish-priest-dashboard-page {
-
   .parish-priest-dashboard-page-container {
-    width: 100%;
-
     .parish-priest-dashboard-page-title {
       @include title;
       background-color: $sidebar-bg;
     }
 
     .parish-priest-dashboard-wrapper {
-      width: 80%;
       @include flexRow;
-      width: 100%;
     }
   }
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .parish-priest-dashboard-page {
+    .parish-priest-dashboard-page-container {
+      .parish-priest-dashboard-page-title {
+        font-size: $nfs;
+        background-color: $mobile-header-bg;
+      }
+
+      .parish-priest-dashboard-wrapper {
+        @include flexColumn;
+      }
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .parish-priest-dashboard-page {
+    .parish-priest-dashboard-page-container {
+      .parish-priest-dashboard-page-title {
+        font-size: $afs;
+      }
+
+      .parish-priest-dashboard-wrapper {
+        @include flexColumn;
+      }
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .parish-priest-dashboard-page {
+    .parish-priest-dashboard-page-container {
+      .parish-priest-dashboard-page-title {
+        font-size: $aafs;
+      }
+
+      .parish-priest-dashboard-wrapper {
+        @include flexColumn;
+      }
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
 }
