--- a/frontend/src/components/user/addressForm/AddressForm.scss
+++ b/frontend/src/components/user/addressForm/AddressForm.scss
@@ -6,7 +6,8 @@
 
   .new-member-address-popup-box {
     @include popupBox;
-    width: 900px;
+    width: 50rem;
+    padding: 1rem 3rem;
 
     .member-address-popup-title {
       @include subTitle;
@@ -96,4 +97,296 @@
       }
     }
   }
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .member-addresses-modal {
+    @include modal;
+
+    .new-member-address-popup-box {
+      @include popupBox;
+      @include verticalScrollbar;
+      width: 16rem;
+
+      .member-address-popup-title {
+        @include subTitle;
+        text-align: center;
+      }
+
+      .address-close-icon {
+        font-size: $sfs;
+      }
+
+      .new-user-address-title {
+        font-size: $sfs;
+      }
+
+      .member-addresses-form {
+        .select-container {
+          @include flexRow;
+
+          .select-label {
+            width: 50%;
+            font-size: $sfs;
+            margin-bottom: 0;
+          }
+
+          .select-options {
+            @include inputField;
+          }
+
+          .select-icon {
+            font-size: $sfs;
+          }
+
+          .select-label-wrapper {
+            width: 100%;
+            @include flexRow;
+            gap: 0.5rem;
+
+            .select-label {
+              width: 20%;
+            }
+
+            .select-options {
+              width: 80%;
+              font-size: $sfs;
+              width: 100%;
+
+              .option {
+                display: block;
+              }
+            }
+          }
+        }
+
+        .input-container {
+          @include inputContainer;
+          .icon {
+            font-size: $sfs;
+          }
+
+          .input-field {
+            font-size: $sfs;
+          }
+
+          .input-label {
+            font-size: $sfs;
+          }
+
+          .input-highlight {
+            font-size: $sfs;
+          }
+
+          .input-field:focus + .input-label {
+            font-size: $sfs;
+          }
+
+          .input-field:focus + .input-label + .input-highlight {
+            width: 100%;
+          }
+        }
+
+        .user-address-btn {
+          font-size: $sfs;
+        }
+      }
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .member-addresses-modal {
+    @include modal;
+
+    .new-member-address-popup-box {
+      @include popupBox;
+      @include verticalScrollbar;
+      width: 30rem;
+      padding: 1rem 2rem;
+
+      .member-address-popup-title {
+        font-size: $afs;
+        text-align: center;
+      }
+
+      .address-close-icon {
+        font-size: $nfs;
+      }
+
+      .new-user-address-title {
+        font-size: $nfs;
+      }
+
+      .member-addresses-form {
+        .select-container {
+          @include flexRow;
+
+          .select-label {
+            width: 50%;
+            font-size: $sfs;
+            margin-bottom: 0;
+          }
+
+          .select-options {
+            @include inputField;
+          }
+
+          .select-icon {
+            font-size: $nfs;
+          }
+
+          .select-label-wrapper {
+            .select-label {
+              width: 30%;
+            }
+
+            .select-options {
+              width: 80%;
+              font-size: $nfs;
+              width: 100%;
+
+              .option {
+                display: block;
+              }
+            }
+          }
+        }
+
+        .input-container {
+          @include inputContainer;
+          .icon {
+            font-size: $nfs;
+          }
+
+          .input-field {
+            font-size: $nfs;
+          }
+
+          .input-label {
+            font-size: $nfs;
+          }
+
+          .input-highlight {
+            font-size: $nfs;
+          }
+
+          .input-field:focus + .input-label {
+            font-size: $nfs;
+          }
+
+          .input-field:focus + .input-label + .input-highlight {
+            width: 100%;
+          }
+        }
+
+        .user-address-btn {
+          font-size: $nfs;
+        }
+      }
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .member-addresses-modal {
+    @include modal;
+
+    .new-member-address-popup-box {
+      @include popupBox;
+      @include verticalScrollbar;
+      width: 35rem;
+      padding: 1rem 2rem;
+
+      .member-address-popup-title {
+        font-size: $aafs;
+      }
+
+      .address-close-icon {
+        font-size: $nfs;
+      }
+
+      .new-user-address-title {
+        font-size: $sfs;
+      }
+
+      .member-addresses-form {
+        .select-container {
+          @include flexRow;
+
+          .select-label {
+            width: 50%;
+            font-size: $sfs;
+            margin-bottom: 0;
+          }
+
+          .select-options {
+            @include inputField;
+          }
+
+          .select-icon {
+            font-size: $nfs;
+          }
+
+          .select-label-wrapper {
+            .select-label {
+              width: 30%;
+            }
+
+            .select-options {
+              width: 80%;
+              font-size: $nfs;
+              width: 100%;
+
+              .option {
+                display: block;
+              }
+            }
+          }
+        }
+
+        .input-container {
+          @include inputContainer;
+          .icon {
+            font-size: $nfs;
+          }
+
+          .input-field {
+            font-size: $nfs;
+          }
+
+          .input-label {
+            font-size: $nfs;
+          }
+
+          .input-highlight {
+            font-size: $nfs;
+          }
+
+          .input-field:focus + .input-label {
+            font-size: $nfs;
+          }
+
+          .input-field:focus + .input-label + .input-highlight {
+            width: 100%;
+          }
+        }
+
+        .user-address-btn {
+          font-size: $nfs;
+        }
+      }
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
 }
